         values, when the oppose is desired.  In other words, the previous design
         relied upon the particular inputs to be set correctly to be used
         correctly - this change helps avoid configuration input mistakes.
      2) Inputs for slot 'direction' is now an identifier for both classes that
         accept valid directions { north, south } or { east, west }.

   String class
      1) Removal of 'virtual' from several methods that don't need it. String is a
         fully defined concrete class, so ideally, it should not serve as a base
         class to something else.
      2) The method 'getString' has been renamed to 'c_str' per discussion above.
      3) Removed method 'getCopyString' which allocated a new character array and
         copied the internal contents of the String object into it.  It returned
         a char* (character pointer) back to callee.  While seemingly useful, this
         method was almost never used.  As the move towards using std::string
         progresses, this method becomes less useful (std::string already provides
         this functionality).

         String x("hello");
         std::string y = x->c_str();   // properly copies the char*-based string

      4) Now that the dafif library has been reworked, and the abstract Record
         is no longer a subclass to String, this String class is now marked 'final'
         to prevent subclassing of this type.

   Table class
      1) Slot parameter 'extrapolate' now accepts a Boolean

   Timer class
      1) Slot parameter 'active' now accepts a Boolean

--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
dafif library (mixr_dafif)

- This library has been revised and updated in a few ways.
  1) All database loader classes are now grouped within a 'loaders' directory.
  2) All record oriented classes are now grouped within a 'records' directory.